<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cmd"
        android:textColor="#4DA0E8"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_liangdu" />

        <SeekBar
            android:id="@+id/seekbar_liangdu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="20"
            android:maxHeight="5dp"
            android:minHeight="3dp"
            android:progress="10"
            android:progressDrawable="@drawable/seekbar_shape"
            android:thumb="@drawable/selector_thumb_bar">

            <requestFocus />
        </SeekBar>
        <!--        android:secondaryProgress="70"-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_contrast" />

        <SeekBar
            android:id="@+id/seekbar_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="20"
            android:maxHeight="5dp"
            android:minHeight="3dp"
            android:progress="10"
            android:progressDrawable="@drawable/seekbar_shape"
            android:thumb="@drawable/selector_thumb_bar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_contrast" />

        <SeekBar
            android:id="@+id/seekbar_gamma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:max="400"
            android:maxHeight="5dp"
            android:minHeight="3dp"
            android:progress="200"
            android:progressDrawable="@drawable/seekbar_shape"
            android:thumb="@drawable/selector_thumb_bar" />
    </LinearLayout>

    <!--    android:progressDrawable="@drawable/seekbar_shape_select"-->
    <!--    android:thumb="@drawable/selector_thumb_bar"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:orientation="vertical">
<!--
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_suofang"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line_while"
                android:text="@string/suofang"
                android:textColor="@color/white" />
-->
            <Button
                android:id="@+id/btn_tixing"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_line_while"
                android:text="@string/xiaozheng"
                android:visibility="gone"
                android:textColor="@color/white" />
        <Button
                android:id="@+id/btn_tixing1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_line_while"
                android:text="@string/xiaozheng"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_daozhi"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_line_while"
                android:text="@string/daoying"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_def"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_line_while"
                android:text="@string/moren"
                android:textColor="@color/white" />                
<!--
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tixing"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_line_while"
                android:text="@string/xiaozheng"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_def"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_line_while"
                android:text="@string/moren"
                android:textColor="@color/white" />
        </LinearLayout>
-->       
        </LinearLayout>

</LinearLayout>